添加更新密码接口
