# src/cn/ucai/superwechat/servlet/ServerStatusServlet.java
@@ -8,6 +8,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
 import cn.ucai.superwechat.bean.Result;
+import cn.ucai.superwechat.utils.I;
 import cn.ucai.superwechat.utils.JsonUtil;
 
 @WebServlet("/getServerStatus")
